# wasm-tools

crates/wast/: Cargo.toml
crates/wast/src/: encode.rs  error.rs  gensym.rs  lexer.rs  lib.rs  names.rs  parser.rs  token.rs  wast.rs  wat.rs
crates/wast/src/component/: binary.rs  component.rs  custom.rs  expand.rs  export.rs  func.rs  import.rs  instance.rs  item_ref.rs  module.rs  resolve.rs  types.rs  wast.rs
crates/wast/src/core/: binary.rs  custom.rs  export.rs  expr.rs  func.rs  global.rs  import.rs  memory.rs  module.rs  table.rs  tag.rs  types.rs  wast.rs
crates/wast/src/core/resolve/: deinline_import_export.rs  mod.rs  names.rs  types.rs
crates/wat/: Cargo.toml
crates/wat/src/: lib.rs
